--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section id="services">
         <div class="">
-            <img src="/_imagens/site-simbol.png" alt="site-simbol" style="width:30px;">
+            <img src="/imagens/site-simbol.png" alt="site-simbol" style="width:30px;">
             <h3>Criação de Sites</h3>
         </div>
         <div>
