--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <p>This is a description of this Project4</p>
         </div>
     </section>
+    <script>
+        let name = window.prompt()
+        name == "Airla" || "airla" || "AIRLA" ? console.log("Nem te conheço") : console.log("Airla, tu é bonita viu")
+    </script>
 </body>
 
 </html>
