--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <h1 id="logo">Vinícius Levi</h1>
         </div>
         <div class="menu">
-            <a class="hyperlink-menu" href="">Home</a>
-            <a class="hyperlink-menu" href="">Curriculum</a>
-            <a class="hyperlink-menu" href="">About me</a>
+            <a class="hyperlink-menu" href="index.html">Home</a>
+            <a class="hyperlink-menu" href="curriculum.html">Curriculum</a>
+            <a class="hyperlink-menu" href="aboutme.html">About me</a>
     </header>
     <section id="services">
         <div class="">
-            <img src="/imagens/site-simbol.png" alt="site-simbol" style="width:30px;">
-            <h3>Criação de Sites</h3>
+            <h3><img src="/imagens/site-simbol.png" alt="site-simbol" style="width:30px;">Criação de Sites</h3>
+            <p>Sites personalizados e performaticos</p>
         </div>
         <div>
             <h3>Integração com Banco de Dados</h3>
@@ -52,10 +52,7 @@
             <p>This is a description of this Project4</p>
         </div>
     </section>
-    <script>
-        let name = window.prompt()
-        name == "Airla" || "airla" || "AIRLA" ? console.log("Nem te conheço") : console.log("Airla, tu é bonita viu")
-    </script>
+    <script>    </script>
 </body>
 
 </html>
